changed css file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="icon" href="https://logos.textgiraffe.com/logos/logo-name/Neha-designstyle-smoothie-m.png" type="image/x-icon">
-            <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+            <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
+            <!-- Second CSS File -->
+            <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
     <title>About Neha</title>
 </head>
 
@@ -11,19 +13,24 @@
 
     
         <header>
-            <div class="heading-name">
-                <h1>Neha Nautiyal</h1>
-            </div>
+            <div class="box-1">
+                <div class="heading-name">
+                    <h1>Neha Nautiyal</h1>
+                </div>
 
-            <ol>
-                <li><a href="#">About |</a></li>
-                <li><a href="portfolio.html" target="_blank">Portfolio |</a></li>
-                <li><a href="contact.html" target="_blank">Contact</a></li>
-            </ol>
+                <div class="links">
+                    <ol>
+                        <li><a href="#">About |</a></li>
+                        <li><a href="portfolio.html" target="_blank">Portfolio |</a></li>
+                        <li><a href="contact.html" target="_blank">Contact</a></li>
+                    </ol>
+                </div>
 
         </header>
 
-        <div class="container">
+                    <div class="box-2">
+
+        <br>
 
         <h2>About Me</h2>
             <hr>
@@ -36,7 +43,8 @@
                 I am interested in the opportunities that are available to me at my fingertips, literally speaking! 
                 </p>
    
-    </div>
+                    </div>
+            </div>
         <footer>
             Updated 2019
         </footer>
