--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <div class="everything">
     
         <header>
             <h1>Neha Nautiyal</h1>
@@ -49,6 +49,7 @@
                 </p>
             </div>
     </div>
+</div>
         <footer>
             Updated 2019
         </footer>
