--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <div class="everything">
     
         <header>
             <div class="box-1">
@@ -45,6 +45,7 @@
    
                     </div>
             </div>
+        </div>
         <footer>
             Updated 2019
         </footer>
