--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="icon" href="https://logos.textgiraffe.com/logos/logo-name/Neha-designstyle-smoothie-m.png" type="image/x-icon">
-            <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+            <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
+            <!-- Link to Second CSS file -->
+            <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
     <title>Contact Neha</title>
 </head>
 
@@ -11,17 +13,23 @@
     <div class="everything">
     
         <header>
-            <h1>Neha Nautiyal</h1>
+            <div class="box-1">
+                <div class="heading-name">
+                    <h1>Neha Nautiyal</h1>
+                </div>
 
-            <ol>
-                <li><a href="index.html" target="_blank">About |</a></li>
-                <li><a href="portfolio.html" target="_blank">Portfolio |</a></li>
-                <li><a href="#">Contact</a></li>
-            </ol>
+                <div class="links">
+                    <ol>
+                        <li><a href="index.html" target="_blank">About |</a></li>
+                        <li><a href="portfolio.html" target="_blank">Portfolio |</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ol>
+                </div>
+            </div>
 
         </header>
 
-        <div class="container">
+        <div class="box-2">
 
         <h2>Contact Me</h2>
             <hr>
