portfolio page changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,16 +41,16 @@
                         <p class="image-title img-title-1">Chemistry</p>
                     <!-- </div> -->
 
-                        <img src="assets/images/chemistry-tag.png" alt="chemistry tag" id="image-5" height="200" weight="200">   
-                            <!-- <p class="image-title img-title-2">and</p> -->
+                        <img src="assets/images/chemistry-tag.png" alt="chemistry tag" id="image-2" height="200" weight="200">   
+                            <p class="image-title img-title-2">and</p>
                     <!-- <br> -->
                         <img src="assets/images/mendeleev-dribbble.png" alt="Scientist in the Lab" id="image-3" height="200" weight="200">
-                            <!-- <p class="image-title img-title-3">coding</p> -->
+                            <p class="image-title img-title-3">coding</p>
                         <img src="assets/images/periodic-table-of-programming-languages.jpg" alt="Periodic Table of Programming Languages" id="image-4" height="200" weight="200">
-                            <!-- <p class="image-title img-title-4">is</p> -->
+                            <p class="image-title img-title-4">is</p>
                     <!-- <br> -->
-                        <img src="assets/images/html-tags-infographics.jpg" alt="Periodic Table of HTML" id="image-2" height="200" weight="200">    
-                            <!-- <p class="image-title img-title-5">Cool.</p> -->
+                        <img src="assets/images/html-tags-infographics.jpg" alt="Periodic Table of HTML" id="image-5" height="200" weight="200">    
+                            <p class="image-title img-title-5">Cool.</p>
                         
                     
                 </div>
