--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <link rel="icon" href="https://logos.textgiraffe.com/logos/logo-name/Neha-designstyle-smoothie-m.png" type="image/x-icon">
-            <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
-            <!-- Second CSS File -->
-            <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
+    <!-- Second CSS File -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
     <title>About Neha</title>
 </head>
 
 <body>
     <div class="everything">
-    
+
         <header>
             <div class="box-1">
                 <div class="heading-name">
@@ -28,26 +29,29 @@
 
         </header>
 
-                    <div class="box-2">
+        <div class="box-2">
 
-        <br>
+            <br>
 
-        <h2>About Me</h2>
+            <h2>About Me</h2>
             <hr>
-                <img id="bio-image" height="200" src="assets/images/Nautiyal_N.jpg" alt="Neha">
+            <img id="bio-image" height="200" src="assets/images/Nautiyal_N.jpg" alt="Neha">
 
-                <p id="bio-content">
-                    I am a chemistry teacher, mom, and aspiring coder. I have been teaching for a total of 8 years. I am currently at a private
-                independent school in Jenkintown, PA for three years. Prior to this school, I taught for 5 years at Olney Charter High School in North Philly. 
-                I live in Philadelphia and I am excited to be on this journey as a student. 
-                I am interested in the opportunities that are available to me at my fingertips, literally speaking! 
-                </p>
-   
-                    </div>
-            </div>
+            <p id="bio-content">
+                I am a chemistry teacher, mom, and aspiring coder. I have been teaching for a total of 8 years. I am
+                currently at a private
+                independent school in Jenkintown, PA for three years. Prior to this school, I taught for 5 years at
+                Olney Charter High School in North Philly.
+                I live in Philadelphia and I am excited to be on this journey as a student.
+                I am interested in the opportunities that are available to me at my fingertips, literally speaking!
+            </p>
+
         </div>
-        <footer>
-            Updated 2019
-        </footer>
+    </div>
+    </div>
+    <footer>
+        Updated 2019
+    </footer>
 </body>
+
 </html>
