--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,88 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html>
+
 <head>
-    <meta charset="UTF-8"/>
-    <link rel="icon" href="https://logos.textgiraffe.com/logos/logo-name/Neha-designstyle-smoothie-m.png" type="image/x-icon">
-            <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
-            <!-- Link to Second CSS file -->
-            <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
-    <title>Contact Neha</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+
+    <!-- Google Fonts stylesheet -->
+    <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
+
+    <script src="main.js"></script>
 </head>
 
 <body>
-    <div class="everything">
-    
+    <wrapper class="d-flex flex-column">
         <header>
-            <div class="box-1">
-                <div class="heading-name">
+
+            <nav class="navbar navbar-light py-0" style="background-color: rgb(204, 198, 198);">
+                <span class="navbar-brand m-0">
                     <h1>Neha Nautiyal</h1>
-                </div>
+                </span>
 
-                <div class="links">
-                    <ol>
-                        <li><a href="index.html" target="_blank">About |</a></li>
-                        <li><a href="portfolio.html" target="_blank">Portfolio |</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ol>
-                </div>
-            </div>
 
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
-
-        <div class="box-2">
-
-        <h2>Contact Me</h2>
-            <hr>
-
-            <div class="content">
-                <p>
-                    <label for="name">Name:</label>
-                    <br>
-                    <input type="text" id="name" required width="940">
-                </p>
-   
-                <p>
-                        <label for="email">Email:</label>
-                        <br>
-                        <input type="email" id="email" required width="940">
-                </p>
-
-                <p>
-                        <label for="message">Message:</label>
-                        <br>
-                        <input type="text" id="message" required>
-                </p>
-                <p>
-                    <input class="submit-button" type="submit">
-                </p>
+        <div class="flex-fill container img-thumbnail mt-4">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Contact Me</h2>
+                </div>
             </div>
-    </div>
-</div>
-        <footer>
-            Updated 2019
-        </footer>
+            <hr>
+            <div class="row">
+                <div class="col-md-12">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Name:</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Jane Doe">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Message:</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <footer>
+                    Updated 2019
+                </footer>
+            </div>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+            crossorigin="anonymous"></script>
 </body>
+
+</html>
+</body>
+
 </html>
