--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
 
     <!-- Google Fonts stylesheet -->
     <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="bio-container">
-                        <img id="bio-image" src="Nautiyal_N.jpg" alt="Neha">
+                        <img id="bio-image" src="assets/images/Nautiyal_N.jpg" alt="Neha">
 
                         <p id="bio-content">
                             I am a chemistry teacher, mom, and aspiring coder. I have been teaching for a total of 8
