--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
 
     <!-- Google Fonts stylesheet -->
     <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
@@ -48,23 +48,25 @@
             </div>
                     <div class="row">
                         <div class="col-md-3">
-                            <img src="Chemistry-coding.png" alt="Chemistry & Coding" class="images img-thumbnail" id="image-1">
+                            <div class="container-fluid">
+                            <img src="assets/images/Chemistry-coding.png" alt="Chemistry & Coding" class="images img-thumbnail" id="image-1">
                             <p class="image-title img-title-1">Chemistry</p>
                         </div>
+                        </div>
                         <div class="col-md-3">
-                            <img src="chemistry-tag.png" alt="chemistry tag" class="images img-thumbnail" id="image-2">
+                            <img src="assets/images/chemistry-tag.png" alt="chemistry tag" class="images img-thumbnail" id="image-2">
                             <p class="image-title img-title-2">and</p>
                         </div>
-                    </div>
-                        <div class="row">
+                    
+                        
                         <div class="col-md-3">
-                            <img src="mendeleev-dribbble.png" alt="Scientist in the Lab" class="images img-thumbnail"
+                            <img src="assets/images/mendeleev-dribbble.png" alt="Scientist in the Lab" class="images img-thumbnail"
                                 id="image-3">
                             <p class="image-title img-title-3">coding</p>
                         </div>
 
                         <div class="col-md-3">
-                            <img src="periodic-table-of-programming-languages.jpg" alt="Periodic Table of Programming Languages"
+                            <img src="assets/images/periodic-table-of-programming-languages.jpg" alt="Periodic Table of Programming Languages"
                                 class="images img-thumbnail" id="image-4">
                             <p class="image-title img-title-4">is</p>
                         </div>
@@ -72,7 +74,7 @@
                     <div class="row">
                         <div class="col-md-3">
 
-                            <img src="html-tags-infographics.jpg" alt="Periodic Table of HTML" class="images img-thumbnail"
+                            <img src="assets/images/html-tags-infographics.jpg" alt="Periodic Table of HTML" class="images img-thumbnail"
                                 id="image-5">
                             <p class="image-title img-title-5">Cool.</p>
                         </div>
