--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Contact Neha</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
 
     <!-- Google Fonts stylesheet -->
     <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
 
-    <script src="main.js"></script>
 </head>
 
 <body>
@@ -61,9 +60,12 @@
                         <div class="form-group">
                             <label for="exampleFormControlTextarea1">Message:</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            
                         </div>
+                        <button type="submit" class="btn">Submit</button>
                     </form>
                 </div>
+
             </div>
         </div>
         </div>
