--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,8 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="container-fluid">
-                            <img src="assets/images/Chemistry-coding.png" alt="Chemistry & Coding" class="images img-thumbnail" id="image-1">
-                            <p class="image-title img-title-1">Chemistry</p>
+                            <a href="../Word-Guess-Game/index.html"><img src="../Word-Guess-Game/assets/images/periodic-table.JPG" alt="Chemistry & Coding" class="images img-thumbnail" id="image-1"></a>
+                            <p class="image-title img-title-1">Chemistry Word Guessing Game</p>
                         </div>
                         </div>
                         <div class="col-md-3">
