--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Contact Neha</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqS8yTpVotX6IryAm8B-djgW2diD6-lcG9Trh3yuELx95_akdueg"
+        type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
@@ -60,7 +62,7 @@
                         <div class="form-group">
                             <label for="exampleFormControlTextarea1">Message:</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                            
+
                         </div>
                         <button type="submit" class="btn">Submit</button>
                     </form>
