--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About | Neha Nautiyal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqS8yTpVotX6IryAm8B-djgW2diD6-lcG9Trh3yuELx95_akdueg"
+        type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
-        
+
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
 
     <!-- Google Fonts stylesheet -->
@@ -21,28 +24,28 @@
 
 <body>
     <wrapper class="d-flex flex-column">
-    <header>
+        <header>
 
-        <nav class="navbar navbar-light py-0" style="background-color: rgb(204, 198, 198);">
-            <span class="navbar-brand m-0">
-                <h1>Neha Nautiyal</h1>
-            </span>
+            <nav class="navbar navbar-light py-0" style="background-color: rgb(204, 198, 198);">
+                <span class="navbar-brand m-0">
+                    <h1>Neha Nautiyal</h1>
+                </span>
 
 
-            <ul class="nav navbar-expand-sm justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <div class="flex-fill container container-fluid img-thumbnail mt-4">
+                <ul class="nav navbar-expand-sm justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div class="flex-fill container container-fluid img-thumbnail mt-4">
             <div class="row">
                 <div class="col-md-12">
                     <h2>About Me</h2>
@@ -68,16 +71,16 @@
                     </div>
                 </div>
             </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-               
-            <footer>
-                      <p>Updated 2019</p>
-                  </footer>
         </div>
-    </div>
-</wrapper>
+        <div class="row">
+            <div class="col-md-12">
+
+                <footer>
+                    <p>Updated 2019</p>
+                </footer>
+            </div>
+        </div>
+    </wrapper>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
