--- a/portfolio.html
+++ b/portfolio.html
@@ -52,14 +52,15 @@
                 <div class="col-md-3">
 
                     <a href="../Word-Guess-Game/index.html"><img src="../Word-Guess-Game/assets/images/periodic-table.JPG"
-                            alt="Chemistry & Coding" class="images img-thumbnail" id="image-1"></a>
+                            alt="Chemistry Word Guess Game" class="images img-thumbnail" id="image-1"></a>
                     <p class="image-title img-title-1">Chemistry Word Guessing Game</p>
                 </div>
 
                 <div class="col-md-3">
 
-                    <img src="assets/images/chemistry-tag.png" alt="chemistry tag" class="images img-thumbnail" id="image-2">
-                    <p class="image-title img-title-2">and</p>
+                    <a href="../RPG-Game/index.html"><img src="assets/images/rpg-game.jpg" alt="Atomic Models RPG Game"
+                            class="images img-thumbnail" id="image-2"></a>
+                        <p class="image-title img-title-2">Atomic Models RPG Game</p>
 
                 </div>
 
