--- a/portfolio.html
+++ b/portfolio.html
@@ -66,9 +66,9 @@
 
 
                 <div class="col-md-3">
-                    <img src="assets/images/mendeleev-dribbble.png" alt="Scientist in the Lab" class="images img-thumbnail"
-                        id="image-3">
-                    <p class="image-title img-title-3">coding</p>
+                    <a href="../TriviaGame/index.html"><img src="assets/images/mendeleev-dribbble.png" alt="Scientist in the Lab" class="images img-thumbnail"
+                        id="image-3"></a>
+                    <p class="image-title img-title-3">Chemistry Trivia Game</p>
                 </div>
 
                 <div class="col-md-3">
