--- a/portfolio.html
+++ b/portfolio.html
@@ -51,14 +51,14 @@
             <div class="row">
                 <div class="col-md-3">
 
-                    <a href="../Word-Guess-Game/index.html" id="portfolio-link"><img src="../Word-Guess-Game/assets/images/periodic-table.JPG"
+                    <a href="../Word-Guess-Game/index.html" class="portfolio-link"><img src="../Word-Guess-Game/assets/images/periodic-table.JPG"
                             alt="Chemistry Word Guess Game" class="images img-thumbnail" id="image-1"></a>
                     <p class="image-title img-title-1">Chemistry Word Guessing Game</p>
                 </div>
 
                 <div class="col-md-3">
 
-                    <a href="../RPG-Game/index.html" id="portfolio-link"><img src="assets/images/rpg-game.jpg" alt="Atomic Models RPG Game"
+                    <a href="../RPG-Game/index.html" class="portfolio-link"><img src="assets/images/rpg-game.jpg" alt="Atomic Models RPG Game"
                             class="images img-thumbnail" id="image-2"></a>
                         <p class="image-title img-title-2">Atomic Models RPG Game</p>
 
@@ -66,13 +66,13 @@
 
 
                 <div class="col-md-3">
-                    <a href="../TriviaGame/index.html" id="portfolio-link"><img src="assets/images/mendeleev-dribbble.png" alt="Scientist in the Lab" class="images img-thumbnail"
+                    <a href="../TriviaGame/index.html" class="portfolio-link"><img src="assets/images/mendeleev-dribbble.png" alt="Scientist in the Lab" class="images img-thumbnail"
                         id="image-3"></a>
                     <p class="image-title img-title-3">Chemistry Trivia Game</p>
                 </div>
 
                 <div class="col-md-3">
-                    <a href="../GifTastic/index.html" id="portfolio-link"><img src="assets/images/periodic-table-of-programming-languages.jpg" alt="Periodic Table of Programming Languages"
+                    <a href="../GifTastic/index.html" class="portfolio-link"><img src="assets/images/periodic-table-of-programming-languages.jpg" alt="Periodic Table of Programming Languages"
                         class="images img-thumbnail" id="image-4"></a>
                     <p class="image-title img-title-4">Element Gif Finder</p>
                 </div>
@@ -80,9 +80,9 @@
             <div class="row">
                 <div class="col-md-3">
 
-                    <img src="assets/images/html-tags-infographics.jpg" alt="Periodic Table of HTML" class="images img-thumbnail"
-                        id="image-5">
-                    <p class="image-title img-title-5">Cool.</p>
+                    <a href="../RPS-Multiplayer/index.html" class="portfolio-link"><img src="assets/images/html-tags-infographics.jpg" alt="Periodic Table of HTML" class="images img-thumbnail"
+                        id="image-5"></a>
+                    <p class="image-title img-title-5">Rock / Paper / Scissors - Multiplayer game</p>
                 </div>
             </div>
 
