--- a/portfolio.html
+++ b/portfolio.html
@@ -49,40 +49,47 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
-
-                    <a href="../Word-Guess-Game/index.html" class="portfolio-link"><img src="../Word-Guess-Game/assets/images/periodic-table.JPG"
+                <div class="col-md-6 image-container">
+                    <a href="../Word-Guess-Game/index.html" class="portfolio-link"><img src="assets/images/word-guess-game.png"
                             alt="Chemistry Word Guess Game" class="images img-thumbnail" id="image-1"></a>
-                    <p class="image-title img-title-1">Chemistry Word Guessing Game</p>
+                    <div class="image-title img-title-1">Chemistry Word Guessing Game</div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-6 image-container">
 
-                    <a href="../RPG-Game/index.html" class="portfolio-link"><img src="assets/images/rpg-game.jpg" alt="Atomic Models RPG Game"
+                    <a href="../RPG-Game/index.html" class="portfolio-link"><img src="assets/images/rpg-game.png" alt="Atomic Models RPG Game"
                             class="images img-thumbnail" id="image-2"></a>
-                        <p class="image-title img-title-2">Atomic Models RPG Game</p>
+                    <div class="image-title img-title-2">Atomic Models RPG Game</div>
 
                 </div>
+            </div>
+            <div class="row">
 
 
-                <div class="col-md-3">
-                    <a href="../TriviaGame/index.html" class="portfolio-link"><img src="assets/images/mendeleev-dribbble.png" alt="Scientist in the Lab" class="images img-thumbnail"
-                        id="image-3"></a>
+                <div class="col-md-6">
+                    <a href="../TriviaGame/index.html" class="portfolio-link"><img src="assets/images/trivia-game.png"
+                            alt="Chemistry Trivia Game" class="images img-thumbnail" id="image-3"></a>
                     <p class="image-title img-title-3">Chemistry Trivia Game</p>
                 </div>
 
-                <div class="col-md-3">
-                    <a href="../GifTastic/index.html" class="portfolio-link"><img src="assets/images/periodic-table-of-programming-languages.jpg" alt="Periodic Table of Programming Languages"
-                        class="images img-thumbnail" id="image-4"></a>
+                <div class="col-md-6">
+                    <a href="../GifTastic/index.html" class="portfolio-link"><img src="assets/images/element-gif-finder.png"
+                            alt="Element Gif Finder" class="images img-thumbnail" id="image-4"></a>
                     <p class="image-title img-title-4">Element Gif Finder</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-6">
 
-                    <a href="../RPS-Multiplayer/index.html" class="portfolio-link"><img src="assets/images/html-tags-infographics.jpg" alt="Periodic Table of HTML" class="images img-thumbnail"
-                        id="image-5"></a>
+                    <a href="../RPS-Multiplayer/index.html" class="portfolio-link"><img src="assets/images/rock-paper-scissors.png"
+                            alt="Rock, Paper, Scissors Multiplayer Game" class="images img-thumbnail" id="image-5"></a>
                     <p class="image-title img-title-5">Rock / Paper / Scissors - Multiplayer game</p>
+                </div>
+                <div class="col-md-6">
+
+                    <a href="../Project-1/index.html" class="portfolio-link"><img src="assets/images/lost-in-textlation.png"
+                            alt="Sentiment Analysis" class="images img-thumbnail" id="image-5"></a>
+                    <p class="image-title img-title-5">Lost in Textlation Sentiment Analysis</p>
                 </div>
             </div>
 
