--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             coincides with being a scientist. I love data: manipulating it, displaying it, analyzing it, and more. As
             an experienced instructor, I also have strong collaboration and communication skills.
           </p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="img/Neha-Nautiyal-Web-Developer-Resume.pdf">Click to Download Resume</a>
         </div>
       </div>
     </div>
