rearranged some buttons

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             coincides with being a scientist. I love data: manipulating it, displaying it, analyzing it, and more. As
             an experienced instructor, I also have strong collaboration and communication skills.
           </p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="img/Neha-Nautiyal-Web-Developer-Resume.pdf">Click to Download Resume</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Skills</a>
         </div>
       </div>
     </div>
@@ -179,7 +179,7 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/rock-paper-scissors.png" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                  JavaScript, jQuery, and Google's Firebase Database
+                JavaScript, jQuery, and Google's Firebase Database
               </div>
               <div class="project-name">
                 Rock, Paper, Scissors Multiplayer Game
@@ -192,7 +192,7 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/element-gif-finder.png" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                  JavaScript, jQuery, AJAX, and GIPHY API
+                JavaScript, jQuery, AJAX, and GIPHY API
               </div>
               <div class="project-name">
                 Element Gif Finder
@@ -205,7 +205,7 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/lost-in-textlation.png" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
-                  JavaScript, jQuery, Firebase, AJAX, & multiple APIs
+                JavaScript, jQuery, Firebase, AJAX, & multiple APIs
               </div>
               <div class="project-name">
                 Lost in Textlation Sentiment Analysis
@@ -252,6 +252,13 @@
         <div class="col-lg-3 ml-auto text-center">
           <i class="fab fa-github fa-3x mb-3 text-muted"></i>
           <a class="d-block" href="https://github.com/NehaNautiyal">Github Profile</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12 text-center mt-5">
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="img/Neha-Nautiyal-Web-Developer-Resume.pdf">Click
+            to Download Resume</a>
         </div>
       </div>
     </div>
