--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <title>Neha Nautiyal's Portfolio Page</title>
 
+  <!-- Favicon -->
+  <link rel="icon" href="https://cdn3.iconfinder.com/data/icons/chemistry-1/512/boiling_water-512.png"
+        type="image/x-icon">
+
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
@@ -80,7 +84,7 @@
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">I have been drawn to technology since childhood, having grown up as the
             daugther of
-            a mechanical engineer. Although I have completed only 2 months of a Coding BootCamp, I have enhanced my
+            a mechanical engineer. Although I am earning a certification for Full-Stack Web Develoment in July of 2019, I have enhanced my
             skills as a technology innovator. I am inclined to work more with backend, which
             coincides with being a scientist. I love data: manipulating it, displaying it, analyzing it, and more. As
             an experienced instructor, I also have strong collaboration and communication skills.
@@ -97,34 +101,46 @@
       <h2 class="text-center mt-0">At Your Service</h2>
       <hr class="divider my-4">
       <div class="row">
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-binoculars text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Detail-Oriented</h3>
-            <p class="text-muted mb-0">I pay attention to every detail, in the code as well as aligning the content
-              with what you need.</p>
+            <i class="fab fa-4x fa-js-square text-primary mb-4"></i>
+            <h3 class="h4 mb-2">JavaScript</h3>
+            <p class="text-muted mb-0">This is the foundation for all of my skills.</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-code-branch text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Collaborative</h3>
-            <p class="text-muted mb-0">I am a team-player that values what everyone brings to the table.</p>
+            <i class="fab fa-4x fa-node text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Node.js</h3>
+            <p class="text-muted mb-0">Back-end technology of choice, with the ability to produce anything.</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-hourglass-half text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Timely Completion</h3>
-            <p class="text-muted mb-0">Finishing the work is important, and finishing the work on-time is crucial. </p>
+            <i class="fas fa-4x fa-database text-primary mb-4"></i>
+            <h3 class="h4 mb-2">SQL</h3>
+            <p class="text-muted mb-0">Requesting, updating, and manipulating data is vital.</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Made with Love</h3>
-            <p class="text-muted mb-0">I commit 110% to everything I do, whether it's personal or professional. The
-              extra ingredient in all of it is always love.</p>
+            <i class="fab fa-4x fa-css3-alt text-primary mb-4"></i>
+            <h3 class="h4 mb-2">CSS</h3>
+            <p class="text-muted mb-0">Aesthetics are just as important to me as functionality.</p>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fab fa-4x fa-react text-primary mb-4"></i>
+            <h3 class="h4 mb-2">React</h3>
+            <p class="text-muted mb-0">Using libraries and frameworks help simpifly the easy stuff to work on solving more complex problems.</p>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-4x fa-terminal text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Bash</h3>
+            <p class="text-muted mb-0">I know how to be the most efficient with accessing the true power of a computer.</p>
           </div>
         </div>
       </div>
@@ -144,6 +160,9 @@
               </div>
               <div class="project-name" onclick="window.open('https://github.com/NehaNautiyal/Word-Guess-Game');">
                 Chemistry Word Guessing Game
+                <div class="project-description">
+                    This game allows the user to press keys to play a hangman-style game from words on the Periodic Table.
+                  </div>
               </div>
             </div>
           </a>
@@ -157,6 +176,9 @@
               </div>
               <div class="project-name">
                 Atomic Model RPG Game
+                <div class="project-description">
+                  This game uses the 4 atomic models to declare a winner after experimental tribulations.
+                </div>
               </div>
             </div>
           </a>
@@ -170,6 +192,9 @@
               </div>
               <div class="project-name">
                 Chemistry Trivia Game
+                <div class="project-description">
+                    This game provides 30 seconds to answer trivia questions and will tally your score at the end.  
+                  </div>
               </div>
             </div>
           </a>
@@ -183,6 +208,9 @@
               </div>
               <div class="project-name">
                 Rock, Paper, Scissors Multiplayer Game
+                <div class="project-description">
+                    This game uses the 4 atomic models to declare a winner after experimental tribulations.
+                  </div>
               </div>
             </div>
           </a>
@@ -196,6 +224,9 @@
               </div>
               <div class="project-name">
                 Element Gif Finder
+                <div class="project-description">
+                    This game uses the 4 atomic models to declare a winner after experimental tribulations.
+                  </div>
               </div>
             </div>
           </a>
@@ -209,6 +240,9 @@
               </div>
               <div class="project-name">
                 Lost in Textlation Sentiment Analysis
+                <div class="project-description">
+                    This game uses the 4 atomic models to declare a winner after experimental tribulations.
+                  </div>
               </div>
             </div>
           </a>
