added project descriptions

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <div class="project-name">
                 Rock, Paper, Scissors Multiplayer Game
                 <div class="project-description">
-                    This game uses the 4 atomic models to declare a winner after experimental tribulations.
+                    This game allows two users from anywhere to play rock, paper, scissors.
                   </div>
               </div>
             </div>
@@ -225,7 +225,7 @@
               <div class="project-name">
                 Element Gif Finder
                 <div class="project-description">
-                    This game uses the 4 atomic models to declare a winner after experimental tribulations.
+                    This app provides a tool for users to view 10 gifs on any element on the Periodic Table using the GIPHY API.
                   </div>
               </div>
             </div>
@@ -241,7 +241,7 @@
               <div class="project-name">
                 Lost in Textlation Sentiment Analysis
                 <div class="project-description">
-                    This game uses the 4 atomic models to declare a winner after experimental tribulations.
+                    This app allows the user to analyze their text and change the meaning of their text.
                   </div>
               </div>
             </div>
