--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Neha Nautiyal's Portfolio Page</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="https://cdn3.iconfinder.com/data/icons/chemistry-1/512/boiling_water-512.png"
+  <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoqdbPirXm1NJbQ2IjcwTltapSsteZiNAicK19svwvzJyLghtA"
         type="image/x-icon">
 
   <!-- Font Awesome Icons -->
