--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">I have been drawn to technology since childhood, having grown up as the
             daugther of
-            a mechanical engineer. Although I am earning a certification for Full-Stack Web Develoment in July of 2019, I have enhanced my
-            skills as a technology innovator. I am inclined to work more with backend, which
+            a mechanical engineer. Although I am earning a certification for Full-Stack Web Develoment in July of 2019, I have always been a technology innovator. I am inclined to work more with backend, which
             coincides with being a scientist. I love data: manipulating it, displaying it, analyzing it, and more. As
             an experienced instructor, I also have strong collaboration and communication skills.
           </p>
