--- a/index.html
+++ b/index.html
@@ -246,6 +246,22 @@
             </div>
           </a>
         </div>
+        <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/thumbnails/blow-up-an-element.png" target="_blank" onclick="window.open('http://blow-elements-up.herokuapp.com/');">
+              <img class="img-fluid" src="img/portfolio/thumbnails/blow-up-an-element.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                  Node.js, Express, mySQL, Handlebars
+                </div>
+                <div class="project-name">
+                  Blow Up an Element
+                  <div class="project-description">
+                      This app allows a user to create a new element and blow it up with a click of a button.
+                    </div>
+                </div>
+              </div>
+            </a>
+          </div>
       </div>
     </div>
   </section>
