--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <div class="project-category text-white-50">
                 JavaScript
               </div>
-              <div class="project-name" onclick="window.open('https://github.com/NehaNautiyal/Word-Guess-Game');">
+              <div class="project-name" onclick="window.open('https://NehaNautiyal.github.io/Word-Guess-Game');">
                 Chemistry Word Guessing Game
                 <div class="project-description">
                     This game allows the user to press keys to play a hangman-style game from words on the Periodic Table.
@@ -257,6 +257,22 @@
                   Blow Up an Element
                   <div class="project-description">
                       This app allows a user to create a new element and blow it up with a click of a button.
+                    </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/thumbnails/ibetya.png" target="_blank" onclick="window.open('http://www.ibetya.io');">
+              <img class="img-fluid" src="img/portfolio/thumbnails/ibetya.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                  Full-Stack (HTML, CSS, JS, Node, Express, Sequelize)
+                </div>
+                <div class="project-name">
+                  iBetYa
+                  <div class="project-description">
+                      This app allows a user to keep track of bets with their friends.
                     </div>
                 </div>
               </div>
