--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="mt-5">
             <i class="fab fa-4x fa-react text-primary mb-4"></i>
             <h3 class="h4 mb-2">React</h3>
-            <p class="text-muted mb-0">Using libraries and frameworks help simpifly the easy stuff to work on solving more complex problems.</p>
+            <p class="text-muted mb-0">Using libraries and frameworks help simplify the easy stuff to work on solving more complex problems.</p>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 text-center">
