--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <!-- <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/thumbnails/rock-paper-scissors.png" target="_blank" onclick="window.open('https://nehanautiyal.github.io/RPS-Multiplayer');">
             <img class="img-fluid" src="img/portfolio/thumbnails/rock-paper-scissors.png" alt="">
             <div class="portfolio-box-caption">
@@ -213,7 +213,7 @@
               </div>
             </div>
           </a>
-        </div>
+        </div> -->
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/thumbnails/element-gif-finder.png" target="_blank" onclick="window.open('https://nehanautiyal.github.io/GifTastic');">
             <img class="img-fluid" src="img/portfolio/thumbnails/element-gif-finder.png" alt="">
@@ -231,22 +231,6 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/thumbnails/lost-in-textlation.png" target="_blank" onclick="window.open('https://nehanautiyal.github.io/Project-1');">
-            <img class="img-fluid" src="img/portfolio/thumbnails/lost-in-textlation.png" alt="">
-            <div class="portfolio-box-caption p-3">
-              <div class="project-category text-white-50">
-                JavaScript, jQuery, Firebase, AJAX, & multiple APIs
-              </div>
-              <div class="project-name">
-                Lost in Textlation Sentiment Analysis
-                <div class="project-description">
-                    This app allows the user to analyze their text and change the meaning of their text.
-                  </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/thumbnails/blow-up-an-element.png" target="_blank" onclick="window.open('http://blow-elements-up.herokuapp.com/');">
               <img class="img-fluid" src="img/portfolio/thumbnails/blow-up-an-element.png" alt="">
               <div class="portfolio-box-caption">
@@ -257,22 +241,6 @@
                   Blow Up an Element
                   <div class="project-description">
                       This app allows a user to create a new element and blow it up with a click of a button.
-                    </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/thumbnails/ibetya.png" target="_blank" onclick="window.open('http://www.ibetya.io');">
-              <img class="img-fluid" src="img/portfolio/thumbnails/ibetya.png" alt="">
-              <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
-                  Full-Stack (HTML, CSS, JS, Node, Express, Sequelize)
-                </div>
-                <div class="project-name">
-                  iBetYa
-                  <div class="project-description">
-                      This app allows a user to keep track of bets with their friends.
                     </div>
                 </div>
               </div>
