justify content center to portfolio items

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <!-- Portfolio Section -->
   <section id="portfolio">
     <div class="container-fluid p-0">
-      <div class="row no-gutters">
+      <div class="row no-gutters" style="justify-content:center;">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/thumbnails/word-guess-game.png" target="_blank" onclick="window.open('https://nehanautiyal.github.io/Word-Guess-Game');">
             <img class="img-fluid" src="img/portfolio/thumbnails/word-guess-game.png" alt="">
